# governance-analysis-engine

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  roadmap.md
src/governance_analysis_engine/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py
src/governance_analysis_engine/clients/: __init__.py  data_client.py
src/governance_analysis_engine/middleware/: __init__.py  error_handler.py
src/governance_analysis_engine/repositories/: __init__.py  proposal_repository.py
src/governance_analysis_engine/schemas/: __init__.py  proposal.py
src/governance_analysis_engine/services/: __init__.py  proposal_service.py
src/tests/: test_health.py
tests/: test_api.py  test_cli.py  test_config.py  test_data_client.py  test_exceptions.py  test_health.py  test_init.py  test_middleware.py  test_proposal_service.py  test_repository.py
