[project]
name = "governance-analysis-engine"
version = "0.1.0"
description = "Analysis engine for Web3 governance data."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.3,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100